# deep_learning

./: .gitattributes  .gitignore  README.md  pyproject.toml
notebooks/: applied_ml_nn.ipynb  cnn_code_notes.ipynb  dl_forward_propogation.ipynb  handwritten_numb_det.ipynb  nn_softmax.ipynb
src/deep_learning_package/: __init__.py  architecture.py  trainer.py  utils.py
src/deep_learning_package/architecture/: __init__.py  gradient_dsc_mine.py  logisticregressionGD..py  logisticregressionGD.py  stochasticGD.py
src/deep_learning_package/general_utils/: __init__.py  data_read.py
